# django-request-logging

./: Dockerfile  Makefile  README.md  boot_django.py  load_test.py  setup.cfg  urls.py
.github/workflows/: sonar.yml
django_request_logging/: app.py
my_app/: urls.py  views.py
request_logging/: app.py  middleware.py
requirements/: base.txt
tests/: tests.py
