[metadata]
name = django-request-logging
version = 0.1
description = A Django app to log request and response via middleware
long_description = file: README.rst
url = https://github.com/MaisTodos/django-request-logging
author = MaisTODOS
author_email = devs@maistodos.com.br
license = MIT license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = true
packages = find:
python_requires = >=3.8
